--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -372,3 +372,43 @@ body{
   margin-right: '10px'!important;
   margin-top:'-5px'!important;
 }
+
+.coin {
+  perspective: 1000px!important;
+}
+
+.coin-inner {
+  position: relative!important;
+  transform-style: preserve-3d!important;
+  transition: transform 1s!important;
+}
+
+.coin .coin-inner.flipping {
+  animation: flip-animation 1s!important;
+}
+
+@keyframes flip-animation {
+  0% {
+    transform: rotateY(0deg)!important;
+  }
+  50% {
+    transform: rotateY(180deg)!important;
+  }
+  100% {
+    transform: rotateY(360deg)!important;
+  }
+}
+
+.coin .coin-inner.heads {
+  transform: rotateY(0deg)!important;
+}
+
+.coin .coin-inner.tails {
+  transform: rotateY(180deg)!important;
+}
+
+.coin-front,
+.coin-back {
+  position: absolute!important;
+  backface-visibility: hidden!important;
+}
