--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -174,6 +174,9 @@ body{
   padding-top: 21px!important;
   padding-left: 24px!important;
   font-size: 23px !important;
+  font-family: "Chau Philomene One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
